compiler/test/compilable/extra-files/test21899b.d
module test21899b;
void findTempDecl(int) {}
