compiler/test/fail_compilation/extra-files/no_monitor_synchronized/object.d
module object;

alias size_t = typeof(int.sizeof);

class Object {}
